# indic-nlp-datasets

./: .gitpod.Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
assets/: hi.csv
datasets/: basic_loaders.py  compat.py  monolingual.py  util.py  wikipedia.py
examples/: Getting_started_with_processing_hindi_text.ipynb  synonyms_in_hindi.ipynb  word_embeddings_and_similarity.ipynb
fixture/: aawiki-20200801-pages-meta-current.xml.bz2
idatasets/: __init__.py  conftest.py
idatasets/datasets/: basic_loaders.py  devdas.py  devdas.txt  monolingual.py  util.py  wikipedia.py
idatasets/tests/: test_basic_loaders.py  test_devdas.py  test_monolingual.py  test_util.py  test_wikipedia.py
tests/: test_monolingual.py  test_util.py  test_wikipedia.py
