[metadata]
version = 0.0
description = Indic NLP dataset loader
url = https://github.com/rahul1990gupta/indic-nlp-datasets
author = Rahul Gupta
author_email = rahul1990gupta@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
# install_requires =

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
